Fix not centered end_of_game text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,6 +48,11 @@ body {
     justify-content: space-between;
 }
 
+.next_player {
+    display: flex;
+    align-items: center;
+}
+
 .next_player,
 .evaluation {
     background-color: #222;
